News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited__c</fullName>
    <label>Amount Credited</label>
    <summarizedField>Payment_Line_Item__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit, Credit Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Line_Item__c.Payment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>