News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <label>Billing Amount</label>
    <summarizedField>Payment_Line_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Payment_Line_Item__c.Payment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>