News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Credit_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Adjusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Adjusted</label>
    <type>Checkbox</type>
</CustomField>