News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Id__c</fullName>
    <label>Lookup Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>