News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Postpaid__c.field-meta.xml
<CustomField>
    <fullName>Postpaid__c</fullName>
    <formula>Amount__c - Prepaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postpaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>