News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Prepaid__c</fullName>
    <formula>((Schedule_End_Date__c - Billing_Date__c )/30)* Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>