News UAT/force-app/main/default/objects/Payment_Schedule__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <formula>Payment__r.Order__r.Opportunity__r.Approved_Sales_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>