News UAT/force-app/main/default/objects/Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Schedule_Start_Date__c</columns>
    <columns>Schedule_End_Date__c</columns>
    <columns>Credit_Adjusted__c</columns>
    <columns>Credit_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>